<resources>
    <string name="new_version_available">There is a newer version of OpenCart application available, click UPDATE to upgrade now	?</string>
    <string name="faulty_other_details">Faulty or Other details</string>
    <string name="view_more_products"></string>
    <string name="edit_address">Edit Address </string>
    <string name="product_is_opened">Product is opened</string>
    <string name="reason_of_return">Reason for Return</string>
    <string name="want_to_proceed">Do you want Proceed? </string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="general">General</string>
    <string name="data">Data</string>
    <string name="links">Links</string>
    <string name="attribute">Attribute</string>
    <string name="option">Option</string>
    <string name="select_Option">Selected Option</string>
    <string name="discount">Discount</string>
    <string name="images">Images</string>
    <string name="custom_field">CustomField</string>
    <string name="no_return">You have not made any previous returns!</string>
    <string name="delete">Delete</string>
    <string name="category_name">Category</string>
    <string name="all_category">All Category</string>
    <string name="warning_terms_condition">"Warning: You must agree to the terms and conditions!"</string>
    <string name="x_results_found">%d Results Found</string>
    <string name="error_while_using_flash">There has been some error while accessing flash on your device.</string>
    <string name="results_found"> Results Found</string>
    <string name="text_detection">Text Detection</string>
    <string name="product_detection">Product Detection</string>
    <string name="search_product">Search Product By:</string>
    <string name="view_all_product">View All </string>
    <string name="Success">Success</string>
    <string name="Error">Error</string>
    <string name="of_toast_for_no_of_item">" of "</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open the navigation drawer</string>
    <string name="drawer_close">Close the navigation drawer</string>
    <string name="close">Close</string>
    <string name="number_error">Enter valid number</string>
    <string name="ship_to">Shiped To </string>
    <string name="something_went_wrog">Something went wrong please try again</string>
    <string name="welcome">Welcome</string>
    <string name="no_product_available">No Product Available</string>
    <string name="make_a_review">MAKE A REVIEW</string>
    <string name="average_rating">Average Rating</string>
    <string name="sign_up"><b>  Signup </b></string>
    <string name="app_name">Getting the location address</string>
    <string name="fetch_address">Fetch Your Location</string>
    <string name="save">Save</string>
    <string name="sub_category">Sub-Categories</string>
    <string name="total_amount_wallet">Your Wallet Balance </string>
    <string name="add_money">Add Money To Wallet</string>
    <string name="enter_amount">Add Amount</string>
    <string name="enter_code">Enter Code</string>
    <string name="my_wallet">My Wallet</string>
    <string name="credit_history">Credit History</string>
    <string name="debit_history">Debit History</string>
    <string name="order_Id">Order ID</string>
    <string name="no_order_found">No Order Found</string>
    <string name="checkout_terms_condition">I have read and agree to the Term and Conditions</string>
    <string name="terms_condition_clickable">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_product_further">View Product</string>
    <string name="wallet_remain_amt_msg">Select Payment Method For Remaining Amount</string>
    <string name="amount_credit">Amount</string>
    <string name="transaction">Transaction</string>
    <string name="track">Track</string>
    <string name="credit_date">Date</string>
    <string name="credit_description">Description</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="dummy_content">Dummy Content</string>
    <string name="enter_valid_quantity">Entered quantity not available</string>
    <string name="warning_enter_review_text">Review text must be greater than 25 charcter </string>
    <string name="new_password_length_check">New Password must have at least 6 characters and Leading or trailing spaces will be ignored.</string>
    <string name="is_require_text"> is required!</string>
    <string name="email_is_required">Email Address is required</string>
    <string name="enter_valid_email">Please Enter a Valid Email!</string>
    <string name="please_wait">please wait</string>
    <string name="processing_request_response">while we process your request</string>
    <string name="intenet_unavailable">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="fill_email_address">Enter the email address </string>
    <string name="paypal_custom">This is text that will be associated with the payment that the app can use.</string>
    <string name="paypal_msg1">Future Payment code received from PayPal</string>
    <string name="paypal_msg2">Profile Sharing code received from PayPal</string>
    <string name="new_address">New Address</string>
    <string name="loading">Please wait Loading ...</string>
    <string name="ok">OK</string>
    <string name="no_partner">No Partners Available</string>
    <string name="alert_sipping_method">Please specify shipping method</string>
    <string name="msg_sipping_method">Sorry, no quotes are available for this order at this time.</string>
    <string name="continue1">CONTINUE</string>
    <string name="browse_products">Browse Products</string>
    <string name="number">Number</string>
    <string name="verify">Verify Your Number</string>
    <string name="meta_tag_keyword">Meta Tag Keyword</string>
    <string name="meta_tag_title">Meta Tag Title</string>
    <string name="meta_tag_description">Meta Tag Description</string>
    <string name="alert_no_shipping_method_available">Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.</string>
    <string name="order_placed">Your Order is placed</string>
    <string name="wait_for_a_moment">Wait for a moment</string>
    <string name="validation_error">Validation Errors</string>
    <string name="fname_is_required">First Name is required!</string>
    <string name="lname_is_required">Last Name is required!</string>
    <string name="telephone_is_required">Telephone number is required !</string>
    <string name="street_address_is_required">street Address is required!</string>
    <string name="city_address_is_required">city is required!</string>
    <string name="no_feature_available">No Feature List Available</string>
    <string name="address_error">Please add address to proceed further</string>
    <string name="zip_is_required">zip is required!</string>
    <string name="checkout">CHECKOUT</string>
    <string name="checkout_as">CHECKOUT AS</string>
    <string name="billing_information">BILLING INFORMATION</string>
    <string name="select_billing_address_enter_new_one">Select a billing address from your address book or enter a new address.</string>
    <string name="select_shipping_address_enter_new_one">Select a shipping address from your address book or enter a new address.</string>
    <string name="shippng_info">SHIPPING INFORMATION</string>
    <string name="use_billing_add">Use Billing Address</string>
    <string name="shipping_method">SHIPPING METHOD</string>
    <string name="payment_info">PAYMENT INFORMATION</string>
    <string name="order_review">ORDER REVIEW</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="share">Share</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="shipping_to_this_address">Ship to this address</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="product">PRODUCT</string>
    <string name="subtotal">SUBTOTAL: </string>
    <string name="subtotal_cart">Subtotal</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="pay_with_paytm">Pay with Paytm</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="unit_price">Unit Price</string>
    <string name="items_found"> result found.</string>
    <string name="no_order_placed">You havn\'t placed any order yet</string>
    <string name="by">by</string>
    <string name="empty_cart_btn">Empty\nCart</string>
    <string name="price_label">PRICE:</string>
    <string name="subtotal_label">SUBTOTAL:</string>
    <string name="no_item_in_cart">You have no items in your shopping cart.</string>
    <string name="empty_cart">Shopping Cart is Empty</string>
    <string name="cart_empty">Empty Cart</string>
    <string name="ques_move_to_wishlist">Are you sure, you want to move item to wish list ?</string>
    <string name="apply_coupon_response">while we apply your coupon</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_remove_from_cart">Are you sure you want to remove this item from the
        cart ?
    </string>
    <string name="option_required">Option Required</string>
    <string name="select_option">Select Option</string>
    <string name="continue_shopping_btn">Continue Shopping</string>
    <string name="proceed_to_checkout">PROCEED TO  CHECKOUT</string>
    <string name="update_cart">UPDATE CART</string>
    <string name="apply">Apply</string>
    <string name="addrbook_action_title">Address Book</string>
    <string name="accountinfo_action_title">Account Information</string>
    <string name="desciption">Description</string>
    <string name="signup_action_title">Sign Up</string>
    <string name="dashboard_action_title">My Dashboard</string>
    <string name="order_id">Order Id  </string>
    <string name="date">Date</string>
    <string name="myorder_action_title">My Orders</string>
    <string name="myproreview_action_title">My Product Reviews</string>
    <string name="mywishlist_action_title">My Wishlist</string>
    <string name="newslettersubs_action_title">Newsletter Subscription</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="mydownloads_action_title">My Downloadable Products</string>
    <string name="Search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_bell">Bell</string>
    <string name="notification">NOTIFICATION</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="seller_order">Seller Order</string>
    <string name="login_action_title">Login</string>
    <string name="account_action_title">Account</string>
    <string name="my_account">My Account</string>
    <string name="category">CATEGORY</string>
    <string name="edit_account">Edit Account</string>
    <string name="sell">Sell</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="marketplace">Marketplace</string>
    <string name="ask_question_to_admin">Ask Question to Admin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_a_guest">Continue As A Guest</string>
    <string name="amount">Amount</string>
</resources>