<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mobikul.MainActivity">

    <item
        android:id="@+id/search"
        android:icon="@drawable/toolbar_search"
        android:title="@string/Search"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_bell"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/action_bell"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/wishlist_shortcut"
        android:id="@+id/action_settings"
        android:title="@string/action_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_menu_cart"
        android:orderInCategory="11111"
        android:title="overFlowMenu"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_overflow"
        android:orderInCategory="11111"
        android:title="overFlowMenu"
        android:visible="false"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/login"
                android:background="#0097A7"
                android:title="@string/login_action_title"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_login26"-->
            <item
                android:id="@+id/signup"
                android:title="@string/signup_action_title"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_signup"-->
            <item
                android:id="@+id/dashboard"
                android:title="@string/my_account"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_dash26"-->
            <item
                android:id="@+id/accountinfo"
                android:title="@string/edit_account"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_acc_info"-->
            <item
                android:id="@+id/addrbook"
                android:title="@string/addrbook_action_title"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_book26"-->
            <item
                android:id="@+id/myproreview"
                android:title="@string/myproreview_action_title"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_star"-->
            <item
                android:id="@+id/myorders"
                android:title="@string/myorder_action_title"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_order"-->
            <item
                android:id="@+id/mywishlist"
                android:title="@string/mywishlist_action_title"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_wishlist26"-->
            <item
                android:id="@+id/newslettersubs"
                android:title="@string/newslettersubs_action_title"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_news"-->
            <item
                android:id="@+id/mydownloads"
                android:title="@string/mydownloads_action_title"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_down26"-->
            <item
                android:id="@+id/marketPlace"
                android:title="@string/sell"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_marketplace"-->
            <item
                android:id="@+id/sellerDashboard"
                android:title="@string/seller_dashboard"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_seller_dashboard"-->
            <item
                android:id="@+id/sellerOrder"
                android:title="@string/seller_order"
                android:visible="false"
                app:showAsAction="never" />
            <!--android:icon="@drawable/ic_seller_order_history"-->
        </menu>
    </item>
</menu>