<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_search" />
    <item android:id="@+id/category"
        android:title="@string/category"
        app:showAsAction="always"
        android:icon="@drawable/ic_add" />
    <item android:id="@+id/notification"
        android:title="@string/notification"
        app:showAsAction="always"
        android:icon="@drawable/ic_notification" />
    <item android:id="@+id/account"
        android:title="@string/account_action_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_notification" />
</menu>