<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/credit_history_cardView"
    app:cardUseCompatPadding="true"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/card_inner_padding">

            <TextView
                android:id="@id/order_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight=".5"
                android:text="@string/order_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_weight=".5"
                android:text="@string/amount"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_inner_padding"
            android:text="@string/date" />

        <TextView
            android:id="@+id/order_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_inner_padding"
            android:text="@string/transaction" />

        <TextView
            android:id="@+id/order_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_inner_padding"
            android:text="@string/desciption" />
    </LinearLayout>

</android.support.v7.widget.CardView>

