<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5x">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/clear"
                android:textAlignment="center"
                android:textColor="@color/black_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/filter"
                android:textAlignment="center"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/done"
                android:textAlignment="center"
                android:textColor="@color/black_overlay" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin5x" />

    </LinearLayout>
</layout>
