<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:elevation="10dp"
            android:padding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin5x"
                    android:text="@string/search_product"
                    android:textSize="@dimen/heading_size_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray_color1" />

                <TextView
                    android:id="@+id/text_detect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/text_detection"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_size_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray_color1" />

                <TextView
                    android:id="@+id/product_detect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/product_detection"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_size_small" />


                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_heading"
                    android:padding="@dimen/margin5x"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
